Inmob-Salesforce/force-app/main/default/objects/Medio_Web_Prospecto__c/Medio_Web_Prospecto__c.object-meta.xml
<CustomObject>
    <label>Medio Web Prospecto</label>
    <nameField>
        <label>Nombre de Medio Web Prospecto</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Medio Web Prospectos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>