Inmob-Salesforce/force-app/main/default/objects/Medio_Web_Prospecto__c/fields/CI_Identificacion_c__c.field-meta.xml
<CustomField>
    <fullName>CI_Identificacion_c__c</fullName>
    <label>CI_Identificacion__c</label>
    <type>TextArea</type>
</CustomField>