Inmob-Salesforce/force-app/main/default/objects/Medio_Web_Prospecto__c/fields/EsWeb__c.field-meta.xml
<CustomField>
    <fullName>EsWeb__c</fullName>
    <formula>IF( ISBLANK(Oportunidad__c)  ,&apos;Si&apos;, &apos;No&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EsWeb</label>
    <type>Text</type>
</CustomField>