Inmob-Salesforce/force-app/main/default/objects/Medio_Web_Prospecto__c/fields/Fecha_Ingreso__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Ingreso__c</fullName>
    <label>Fecha Ingreso</label>
    <type>Date</type>
</CustomField>