Inmob-Salesforce/force-app/main/default/objects/Medio_Web_Prospecto__c/fields/Oportunidad__c.field-meta.xml
<CustomField>
    <fullName>Oportunidad__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Oportunidad</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Medio Web Prospectos</relationshipLabel>
    <relationshipName>Medio_Web_Prospectos</relationshipName>
    <type>Lookup</type>
</CustomField>