Inmob-Salesforce/force-app/main/default/objects/Medio_Web_Prospecto__c/fields/Prospecto__c.field-meta.xml
<CustomField>
    <fullName>Prospecto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prospecto</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Medio Web Prospectos</relationshipLabel>
    <relationshipName>Medio_Web_Prospectos</relationshipName>
    <type>Lookup</type>
</CustomField>