Inmob-Salesforce/force-app/main/default/objects/Medio_Web_Prospecto__c/fields/Proyecto__c.field-meta.xml
<CustomField>
    <fullName>Proyecto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Proyecto</label>
    <referenceTo>Proyecto__c</referenceTo>
    <relationshipLabel>Medio Web Prospecto</relationshipLabel>
    <relationshipName>Medio_Web_Prospectos</relationshipName>
    <type>Lookup</type>
</CustomField>